--- a/index.html
+++ b/index.html
@@ -501,10 +501,7 @@
 
     <!-- ============ End of Project1 =============== -->
 
-
-      </div>
-
-  <!-- ======= Project2 description bullet ======= -->
+<!-- ======= Project2 description bullet ======= -->
 
       <div class="container" data-aos="fade-up">
 
@@ -541,7 +538,6 @@
                 <p>
                 MYOnset package is available on <a href="https://pypi.org/project/myonset/"> PyPI</a> and <a href=https://github.com/lspieser/myonset"> GitHub</a>.
                 </p>
-
                 <b>Link to project repository/sources:</b>
                 <br>
                 <ul>
@@ -600,6 +596,177 @@
       </div>
 
     <!-- ============ End of Project2 =============== -->
+
+ <!-- ======= Project3 description bullet ======= -->
+
+      <div class="container" data-aos="fade-up">
+
+      <a class="active" id="project3">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project3.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+            <div class="container my-4">
+
+              <!-- <a id="project1"> -->
+              <h3>Electronic laboratory notebook presentation and discussion (eLab)</h3>
+              <!-- </a> -->
+              <p>
+                by Sylvain Takerkart & Simon Moré & Killian Rochet
+              </p>
+              <hr>
+
+              <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project3" role="button" aria-controls="collapse_project3"><h3>Description</h3></button>
+
+              <section class="collapse" id="collapse_project3">
+                <p>eLab is an electronic laboratory notebook for researchers. Useful for the acquisition of different experimental data/ metadata.</p>
+                <p>Contribution to no longer have a paper laboratory notebook.</p>
+                <p>Useful for the data acquisition process by researchers.</p>
+                <p>Is important in the data standardization process. </p>
+                <b>Link to project repository/sources:</b>
+                <br>
+                <ul>
+                <li>You can find more information about eLabFTW <a href="https://www.elabftw.net"> here</a></li>
+                <li><a href="https://github.com/elabftw/elabftw">on github</a></li>
+                </ul>
+                <b>Goals for the BrainHack:</b>
+                <p>The aim is the presentation of an electronic laboratory notebook: eLab. Allowing the acquisition of experimental data/ metadata.</p>
+                <p>This presentation will be followed by a general discussion on the use of laboratory notebooks and how to use them</p>
+                <b>Communication channels:</b>
+                <p><a href="https://github.com/Brainhack-Marseille/brainhack-marseille.github.io/issues/39">via github issue</a></p>
+                <b>What will participants learn?</b>
+                <ul>
+                <li>electronic lab notebook</li>
+                <li>different way to use it</li>
+                </ul>
+
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            This is a brainstorming project, non-coding skills are required:
+          </div>
+        </div>
+
+      <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                sharing ideas : 100%
+              </div>
+            </div>
+
+        </div>
+        <hr style="height:20px">
+
+      </div>
+
+    <!-- ============ End of Project3 =============== -->
+
+<!-- ======= Project4 description bullet ======= -->
+
+      <div class="container" data-aos="fade-up">
+
+      <a class="active" id="project4">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project_template.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+            <div class="container my-4">
+
+              <!-- <a id="project1"> -->
+              <h3>Surf(ac)ing fMRI data</h3>
+              <!-- </a> -->
+              <p>
+                by Matthieu Gilson, Julien Sein, Jean-Luc Anton, Andrea Bagante, Martin Szinte <BR>
+                mattermost ID: <a href="https://github.com/matgilson"> @matgilson</a> , @julien.sein, @jl-anton, <a href=" https://github.com/andreabag">@andreabag</a>
+              </p>
+              <hr>
+
+              <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project4" role="button" aria-controls="collapse_project4"><h3>Description</h3></button>
+
+              <section class="collapse" id="collapse_project4">
+                <p>
+                The goal of this project is to combine tools in a pipeline for surface-based analysis of fMRI data.
+                Surface-based analysis is a powerful way to align data from different subjects and datasets (<a href="https://www.nature.com/articles/s41598-020-62832-z"> nature</a> , <a href="https://www.sciencedirect.com/science/article/abs/pii/S1361841512000357"> science</a>).
+                </p>
+                <p>
+                Join us to test tools that will help you to analyze your own fMRI data at the whole-brain level! </p>
+                <p>The pipeline will combine open-science tools like fMRIprep, Workbench (from HCP), nilearn (Python library).
+                We will provide a couple of subject data to benchmark the tools; they will be formatted in the <a href="https://bids.neuroimaging.io/">  BIDS format</a>, which is a standard to share data.
+                <p>Experience in Python is recommended.</p>
+                <p>You should install a Python distribution like Anaconda beforehand (https://anaconda.org/),we may also use MRI viewer like mango (https://mangoviewer.com/)
+                and tools from Workbench (https://humanconnectome.org/software/connectome-workbench).</p>
+                </p>
+                <b>Link to project repository/sources:</b>
+                <p>To be announced</p>
+                <b>Goals for the BrainHack:</b>
+                <ul>
+                <li>contribute to benchmarking of open-source tools in fMRI analysis</li>
+                <li>contribute to promoting sharable open-source tools in local neuroscientific community, beyond the computational community</li>
+                </ul>
+                <b>Communication channels:</b>
+                <p><a href="https://mattermost.brainhack.org/brainhack/channels/bhg23-marseille-surfacing_fmri_data">via mattermost</a></p>
+                <p><a href="https://github.com/Brainhack-Marseille/brainhack-marseille.github.io/issues/37">via github issue</a></p>
+                <b>What will participants learn?</b>
+                <ul>
+                <li>MRI data manipulation (including BIDS format)</li>
+                <li>fMRI preprocessing (fmriprep, workbench)</li>
+                <li>decoding (nilearn)</li>
+                </ul>
+                <b>Good first issues</b>
+                <ul>
+                <li>issue one: tutorial of <a href="https://nilearn.github.io/stable/auto_examples/00_tutorials/index.html">nilearn</a> on surface analysis</li>
+                <li>ssue two: find a good issue...</li>
+                </ul>
+
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            This is a coding project, basic git skills are required:
+          </div>
+        </div>
+
+      <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Python coding : 60%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                data manipulation: 40%
+              </div>
+            </div>
+
+        </div>
+        <hr style="height:20px">
+
+      </div>
+
+    <!-- ============ End of Project4 =============== -->
+
 
     </section> <!-- ======= End Projects Section ======= -->
 
