update date and prgm

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 <!--        <p> Registration will open end of summer 2023.</p> -->
 
-        <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Wednesday November the 15th .<br>
+        <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Wednesday November the 24th .<br>
 <!--          <b>Registration is now CLOSED.</b> -->
           <br>
           Note that there is a <b></b>limitation of 80 people</b> on site and that the event will be <b>light-hybrid</b> (unconference + some projects).
@@ -271,8 +271,8 @@
             <th scope="row" class="align-middle text-nowrap" style="width: 10%">14h00-15h20</th>
             <td class="table-primary"><b> Sharing expertise session</b>
                 <ul>
-                  <li>14h00-14h40 How to 'Git' on with a clean code <i> by Ruggero Basanisi (Lucca, IMT) </i> </li>
-                  <li>14h40-15h20 Green session and round table <i> by Marmaduke Woodman & Manuel Mercier (AMU, INS) </i> </li>
+                  <li>14h00-14h40 - How to 'Git' on with a clean code <i> by Ruggero Basanisi (Lucca, IMT) </i> </li>
+                  <li>14h40-15h20 - Programming, energy and environement, does 'green-coding' exist? <i> by Marmaduke Woodman, Julien Lefèvre & Manuel Mercier (AMU, INS, INT) </i> </li>
                 </ul>
               </td>
             <tr>
