add new project

--- a/index.html
+++ b/index.html
@@ -765,8 +765,139 @@
 
       </div>
 
-    <!-- ============ End of Project4 =============== -->
+    <!-- ============ End of Project5 =============== -->
 
+<!-- ======= Project4 description bullet ======= -->
+
+      <div class="container" data-aos="fade-up">
+
+      <a class="active" id="project5">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project5.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+            <div class="container my-4">
+
+              <!-- <a id="project1"> -->
+              <h3>Building models that interpret neuroimaging data</h3>
+              <!-- </a> -->
+              <p>
+                by Marmaduke Woodman <BR>
+              </p>
+              <hr>
+              <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project5" role="button" aria-controls="collapse_project5"><h3>Description</h3></button>
+
+              <section class="collapse" id="collapse_project5">
+                <ul dir="auto">
+                <li>What are you doing, for whom, and why?</li>
+                </ul>
+                <p dir="auto">We are writing a new implementation of whole brain models oriented towards recent machine learning algorithms.  This implementation is for students &amp; post docs who will come up with tomorrow's theory of brain (dys)function and need better tools for doing so.</p>
+                <ul dir="auto">
+                <li>What makes your project special and exciting?</li>
+                </ul>
+                <p dir="auto">Our project is 🦄🦄🦄 because we are building fine-grained models of neural dynamics in entire cohorts where current whole brain models only maps coarse-grained statistics.</p>
+                <ul dir="auto">
+                <li>How to get started?</li>
+                </ul>
+                <p dir="auto">The package is being developed at <a href="https://github.com/ins-amu/vbjax">https://github.com/ins-amu/vbjax</a> and includes neural mass and field models, forward models for MEG/fMRI and some data fitting examples.</p>
+                <p dir="auto">For the brain hack we will use data from HCP MEG with Brainstorm based preprocessing; scripts at <a href="https://github.com/maedoc/friedchicken">https://github.com/maedoc/friedchicken</a>, but this is not so much the focus of the project.</p>
+                <ul dir="auto">
+                <li>Where to find key resources?</li>
+                </ul>
+                <p dir="auto">More resources on the background of the modeling is available at <a href="https://thevirtualbrain.org" rel="nofollow">https://thevirtualbrain.org</a> and <a href="https://www.ebrains.eu/tools/the-virtual-brain" rel="nofollow">https://www.ebrains.eu/tools/the-virtual-brain</a>.</p>
+                <b>Link to project repository/sources:</b>
+                <p dir="auto"><a href="https://github.com/ins-amu/vbjax">https://github.com/ins-amu/vbjax</a></p>
+                <b>Goals for the BrainHack:</b>
+                <ul dir="auto">
+                <li>discuss use cases with potential users, even those unfamiliar with modeling</li>
+                <li>help new users install and run examples</li>
+                <li>extend existing set of models</li>
+                <li>write new examples for data users have already prepared</li>
+                <li>test deep neural network for more flexible time series modeling</li>
+                </ul>
+                <b> Good first issues</b>
+                <ul dir="auto">
+                <li><span class="reference"><svg class="octicon octicon-issue-opened open mr-1" title="Open" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"></path><path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"></path></svg><a class="issue-link js-issue-link" data-error-text="Failed to load title" data-id="1577387801" data-permission-text="Title is private" data-url="https://github.com/ins-amu/vbjax/issues/11" data-hovercard-type="issue" data-hovercard-url="/ins-amu/vbjax/issues/11/hovercard" href="https://github.com/ins-amu/vbjax/issues/11">Generate Sphinx docs<span class="issue-shorthand">&nbsp;ins-amu/vbjax#11</span></a></span></li>
+                <li><span class="reference"><svg class="octicon octicon-issue-opened open mr-1" title="Open" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"></path><path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"></path></svg><a class="issue-link js-issue-link" data-error-text="Failed to load title" data-id="1632577678" data-permission-text="Title is private" data-url="https://github.com/ins-amu/vbjax/issues/29" data-hovercard-type="issue" data-hovercard-url="/ins-amu/vbjax/issues/29/hovercard" href="https://github.com/ins-amu/vbjax/issues/29">Add tests for partial observed node dynamics<span class="issue-shorthand">&nbsp;ins-amu/vbjax#29</span></a></span></li>
+                <li><span class="reference"><svg class="octicon octicon-issue-opened open mr-1" title="Open" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"></path><path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"></path></svg><a class="issue-link js-issue-link" data-error-text="Failed to load title" data-id="1537128676" data-permission-text="Title is private" data-url="https://github.com/ins-amu/vbjax/issues/7" data-hovercard-type="issue" data-hovercard-url="/ins-amu/vbjax/issues/7/hovercard" href="https://github.com/ins-amu/vbjax/issues/7">Add colored noise option<span class="issue-shorthand">&nbsp;ins-amu/vbjax#7</span></a></span></li>
+                </ul>
+
+                <b>Communication channels:</b>
+<!--                <p><a href="https://mattermost.brainhack.org/brainhack/channels/bhg23-marseille-surfacing_fmri_data">via mattermost</a></p>-->
+                <p>nothing for the moment</p>
+                <b> Skills</b>
+                <ul dir="auto">
+                <li>Brainstorming use cases, data features &amp; models 50%</li>
+                <li>Python coding &amp; debugging 50%</li>
+                </ul>
+                <b> Onboarding documentation</b>
+                <p dir="auto"><a href="https://github.com/ins-amu/vbjax#readme">https://github.com/ins-amu/vbjax#readme</a></p>
+                <b> What will participants learn?</b>
+                <ul dir="auto">
+                <li>how to run a whole-brain simulation</li>
+                <li>how to use Jax &amp; NumPyro, potentiall w/ GPUs</li>
+                <li>how to optimize a model to fit data</li>
+                <li>how to do Bayesian MCMC to find parameters consistent with data</li>
+                </ul>
+                <b> Data to use</b>
+                <p dir="auto">We are using mostly data from HCP <a href="https://db.humanconnectome.org" rel="nofollow">https://db.humanconnectome.org</a>,</p>
+                <ul dir="auto">
+                <li>preprocessed connectomes and BOLD from EBRAINS (<a href="https://search.kg.ebrains.eu" rel="nofollow">https://search.kg.ebrains.eu</a>)</li>
+                <li>MEG w/ Brainstorm based preprocessing (<a href="https://github.com/maedoc/friedchicken">https://github.com/maedoc/friedchicken</a>)</li>
+                </ul>
+                <b> Number of collaborators</b>
+                <p dir="auto">2</p>
+                <b> Credit to collaborators</b>
+                <p dir="auto"><a href="https://github.com/ins-amu/vbjax/graphs/contributors">https://github.com/ins-amu/vbjax/graphs/contributors</a></p>
+                <p method_development, other</p>
+                <b> Development status</b>
+                <p> 2_releases_existing</p>
+                <b> Topic</b>
+                <p> bayesian_approaches, causality, connectome, deep_learning, machine_learning, neural_networks, reproducible_scientific_methods, statistical_modelling, systems_neuroscience</p>
+                <b> Tools</b>
+                <p> Brainstorm, Jupyter, MNE, other</p>
+                <b> Programming language</b>
+                <p> containerization, documentation, Matlab, Python</p>
+                <b> Modalities</b>
+                <p> MEG, other</p>
+
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            This is a brainstorming and coding project, Python skills are required:
+          </div>
+        </div>
+
+      <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Brainstorming use cases, data features & models 50%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Python coding & debugging 50%
+              </div>
+            </div>
+
+        </div>
+        <hr style="height:20px">
+
+      </div>
+
+    <!-- ============ End of Project5 =============== -->
 
     </section> <!-- ======= End Projects Section ======= -->
 
