update deadline registration date

--- a/index.html
+++ b/index.html
@@ -205,14 +205,21 @@
         </div>
 
 <!--        <p> Registration will open end of summer 2023.</p> -->
+            <div class="d-flex justify-content-center">
+              <H2> The registration deadline is <font color="#FF0000"> Friday 24th November</font></H2>
+            </div>
+            <p align="center">
 
-        <p align="center">To register to the event, please click on the button below to fill the form. The <b>deadline for registration</b> is Wednesday November the 24th .<br>
 <!--          <b>Registration is now CLOSED.</b> -->
-          <br>
-          Note that there is a <b></b>limitation of 80 people</b> on site and that the event will be <b>light-hybrid</b> (unconference + some projects).
-          <br>
-          For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the organization team</a>.
-          <br>Lunch and social event <b>are not guaranteed</b> for late registrations.</p>
+            <br>
+            Note that there is a <b></b>limitation of 80 people</b> on site and that the event will be <b>light-hybrid</b> (unconference + some projects).
+            <br>
+            For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the organization team</a>.
+            <br>
+            Lunch and social event <b>are not guaranteed</b> for late registrations.
+            <br><br>
+            To register to the event, please click on the button below to fill the form.
+            </p>
 
         <div class="d-flex justify-content-center">
           <!-- <a class="btn btn-secondary" href="https://redcap.int.univ-amu.fr/surveys/?s=MR7K9LRJPJ9K8TNX" title="Register now, and send the email!"><h4>REGISTER</h4></a> -->
