--- a/index.html
+++ b/index.html
@@ -772,9 +772,9 @@
 
       </div>
 
-    <!-- ============ End of Project5 =============== -->
+    <!-- ============ End of Project4 =============== -->
 
-<!-- ======= Project4 description bullet ======= -->
+<!-- ======= Project5 description bullet ======= -->
 
       <div class="container" data-aos="fade-up">
 
@@ -905,6 +905,136 @@
       </div>
 
     <!-- ============ End of Project5 =============== -->
+
+        <!-- ======= Project6 description bullet ======= -->
+
+      <div class="container" data-aos="fade-up">
+
+      <a class="active" id="project5">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project6.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+            <div class="container my-4">
+
+              <!-- <a id="project1"> -->
+              <h3>NARPS Open Pipelines</h3>
+              <!-- </a> -->
+              <p>
+                <p dir="auto">by Boris Clénet - R&amp;D Engineer, Empenn Team, INRIA Rennes<br>
+                Mattermost : <a href="https://mattermost.brainhack.org/brainhack/messages/@bclenet" rel="nofollow">@bclenet</a></p>
+                <BR>
+              </p>
+
+              <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project6" role="button" aria-controls="collapse_project6"><h3>Description</h3></button>
+
+              <section class="collapse" id="collapse_project6">
+                <p dir="auto">The goal of the NARPS Open Pipelines project is to create a codebase reproducing the 70 pipelines of the NARPS study (Botvinik-Nezer et al., 2020) and share this as an open resource for the community.</p>
+                <p dir="auto">We hope this tools will help analysing and understanding variability of fMRI analysis workflows, hence participating in the reproducible research movement.</p>
+                <p dir="auto">Find relevant information about how to get started is in the <a href="https://github.com/Inria-Empenn/narps_open_pipelines#readme">README.md</a> file.</p>
+                <p dir="auto">Join us and contribute to an open-source tool for the community !</p>
+                <h3 dir="auto">Link to project repository/sources</h3>
+                <p dir="auto"><a href="https://github.com/Inria-Empenn/narps_open_pipelines">https://github.com/Inria-Empenn/narps_open_pipelines</a></p>
+
+                <b>Goals for the BrainHack:</b>
+                <ul dir="auto">
+                <li>start new pipeline reproductions</li>
+                <li>contribute to already stared pipelines</li>
+                <li>proof read the documentation</li>
+                <li>contribute to the documentation</li>
+                <li>write tests for existing pipelines</li>
+                </ul>
+
+                <b> Good first issues</b>
+                <ul dir="auto">
+                <li>Contribute to the documentation (give feedback, help organizing)</li>
+                <li>Write the pseudo-code for a pipeline</li>
+                <li>Debug already implemented pipelines</li>
+                </ul>
+
+                <b>Communication channels:</b>
+                <p dir="auto"><a href="https://mattermost.brainhack.org/brainhack/channels/narps-open-pipelines" rel="nofollow">Mattermost channel</a></p>
+
+                <b> Skills</b>
+                <ul dir="auto">
+                <li>fMRI statistical analysis: 40%</li>
+                <li>python (+ nipype): 30%</li>
+                <li>writing and organizing documentation: 30%</li>
+                </ul>
+
+                <b> Onboarding documentation</b>
+                <p dir="auto">General information can be found here: <a href="https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/README.md">README file</a><br>
+                How to contribute: <a href="https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/CONTRIBUTING.md">CONTRIBUTING file</a></p>
+
+                <b> What will participants learn?</b>
+                <ul dir="auto">
+                <li>using the nipype python library</li>
+                <li>lots of fMRI analysis workflow examples</li>
+                <li>good practices for (python) coding</li>
+                </ul>
+                <b> Data to use</b>
+                <p dir="auto">Although it may not be useful during the brainhack, the project's documentation (see <a href="https://github.com/Inria-Empenn/narps_open_pipelines/blob/main/docs/data.md">corresponding section</a>) gives information about required data.</p>
+
+                <b> Number of collaborators</b>
+                <p dir="auto">4</p>
+                <b> Credit to collaborators</b>
+                <p dir="auto">All project contributors are listed in the <a href="https://github.com/Inria-Empenn/narps_open_pipelines#credits">Credits</a> section of the project.</p>
+                <p method_development, other</p>
+                <p dir="auto">documentation, pipeline_development</p>
+                <b> Development status</b>
+                <p dir="auto">1_basic structure</p>
+                <b> Topic</b>
+                <p>reproducible_scientific_methods, statistical_modelling</p>
+                <b> Tools</b>
+                <p>AFNI, ANTs, BIDS, Datalad, fMRIPrep, FSL, Nipype, SPM</p>
+                <b> Programming language</b>
+                <p> documentation, Python</p>
+                <b> Modalities</b>
+                <p> fMRI</p>
+
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            This is a brainstorming and coding project, Python skills are required:
+          </div>
+        </div>
+
+      <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                fMRI statistical analysis: 40%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 30%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                python (+ nipype): 30%
+              </div>
+            </div>
+
+          <div class="progress">
+              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 30%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                writing and organizing documentation: 30%
+              </div>
+            </div>
+
+        </div>
+        <hr style="height:20px">
+
+      </div>
+
+    <!-- ============ End of Project6 =============== -->
 
     </section> <!-- ======= End Projects Section ======= -->
 
