update title of project6

--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
             <div class="container my-4">
 
               <!-- <a id="project1"> -->
-              <h3>NARPS Open Pipelines</h3>
+              <h3>NARPS Open Pipelines - A codebase to study variability of fMRI analysis workflows</h3>
               <!-- </a> -->
               <p>
                 <p dir="auto">by Boris Clénet - R&amp;D Engineer, Empenn Team, INRIA Rennes<br>
