--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <td class="table-primary"><b> Sharing expertise session</b>
                 <ul>
                   <li>14h00-14h40 - How to 'Git' on with a clean code <i> by Ruggero Basanisi (Lucca, IMT) </i> </li>
-                  <li>14h40-15h20 - Programming, energy and environement, does 'green-coding' exist? <i> by Marmaduke Woodman, Julien Lefèvre & Manuel Mercier (AMU, INS, INT) </i> </li>
+                  <li>14h40-15h20 - Programming, energy and environement, does 'green-coding' exist? <i> by Marmaduke Woodman, Julien Lefèvre, Nathan Lemmers, Manuel Mercier, Matthieu Gilson (AMU, INS, INT, Insa) </i> </li>
                 </ul>
               </td>
             <tr>
@@ -340,7 +340,7 @@
           <th scope="row" class="align-middle text-nowrap" style="width: 10%">18h00-19h00</th>
             <td class="table-success"><b> Round table on <a href="https://pbil.univ-lyon1.fr/members/tannier/usageright/"> UsageRight in Scientific Research</a> </b>
                 <ul>
-                  <li>18h00-19h00 -<i> <a href="https://lbbe.univ-lyon1.fr/fr/annuaires-des-membres/tannier-eric"> Eric Tannier </i> </li>
+                  <li>18h00-19h00 -<i> <a href="https://lbbe.univ-lyon1.fr/fr/annuaires-des-membres/tannier-eric"> Eric Tannier, Julien Lefèvre </i> </li>
                 </ul>
             </td>
           </tr>
