--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
 
 <!--        <p> Registration will open end of summer 2023.</p> -->
             <div class="d-flex justify-content-center">
-              <H2> The registration deadline is <font color="#FF0000"> Friday 24th November</font></H2>
+<!--              <H2> The registration deadline is <font color="#FF0000"> Friday 24th November</font></H2>-->
+              <H2> <b>Sorry :-( Registration is now <font color="#FF0000">CLOSED</font>.</b></H2>
             </div>
             <p align="center">
 
-<!--          <b>Registration is now CLOSED.</b> -->
             <br>
             Note that there is a <b></b>limitation of 80 people</b> on site and that the event will be <b>light-hybrid</b> (unconference + some projects).
             <br>
