--- a/index.html
+++ b/index.html
@@ -799,22 +799,10 @@
               <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project5" role="button" aria-controls="collapse_project5"><h3>Description</h3></button>
 
               <section class="collapse" id="collapse_project5">
-                <ul >
-                <li>What are you doing, for whom, and why?</li>
-                </ul>
                 <p>We are writing a new implementation of whole brain models oriented towards recent machine learning algorithms.  This implementation is for students &amp; post docs who will come up with tomorrow's theory of brain (dys)function and need better tools for doing so.</p>
-                <ul >
-                <li>What makes your project special and exciting?</li>
-                </ul>
                 <p>Our project is 🦄🦄🦄 because we are building fine-grained models of neural dynamics in entire cohorts where current whole brain models only maps coarse-grained statistics.</p>
-                <ul >
-                <li>How to get started?</li>
-                </ul>
                 <p>The package is being developed at <a href="https://github.com/ins-amu/vbjax">https://github.com/ins-amu/vbjax</a> and includes neural mass and field models, forward models for MEG/fMRI and some data fitting examples.</p>
                 <p>For the brain hack we will use data from HCP MEG with Brainstorm based preprocessing; scripts at <a href="https://github.com/maedoc/friedchicken">https://github.com/maedoc/friedchicken</a>, but this is not so much the focus of the project.</p>
-                <ul >
-                <li>Where to find key resources?</li>
-                </ul>
                 <p>More resources on the background of the modeling is available at <a href="https://thevirtualbrain.org" rel="nofollow">https://thevirtualbrain.org</a> and <a href="https://www.ebrains.eu/tools/the-virtual-brain" rel="nofollow">https://www.ebrains.eu/tools/the-virtual-brain</a>.</p>
                 <b>Link to project repository/sources:</b>
                 <p><a href="https://github.com/ins-amu/vbjax">https://github.com/ins-amu/vbjax</a></p>
@@ -1250,6 +1238,81 @@
       </div>
 
     <!-- ============ End of Project8 =============== -->
+
+        <!-- ======= Project9 description bullet ======= -->
+
+      <div class="container" data-aos="fade-up">
+
+      <a class="active" id="project8">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project_template.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+            <div class="container my-4">
+
+              <!-- <a id="project1"> -->
+              <h3>Developing a routine to analyse calcium signals</h3>
+              <!-- </a> -->
+              <p>
+                Elysa Crozat, Jose Jorge Ramirez Franco, Nicolas Wanaverbecq
+              </p>
+
+              <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project9" role="button" aria-controls="collapse_project9"><h3>Description</h3></button>
+
+              <section class="collapse" id="collapse_project9">
+              Calcium signal analysis from neuronal population expressing GCaMP6 (GECaP)<br>
+              For the team research project<br>
+              To monitor and determine neuronal activity and modulation</p>
+
+              Combining FIJI/Image J package with python code to create a full integrated environement</p>
+              <p dir="auto">How to get started?<br>
+              Python script to call and use Image J package</p>
+              <p dir="auto">Where to find key resources?<br>
+              Image J developer site</p>
+              </li>
+
+              <b>Goals for Brainhack Global</b>
+              <p>Combine image J plugins into python code</p>
+              <p dir="auto">To code, generate a analysis suite</p>
+
+              <b>Topics</b>
+              data_visualisation, physiology
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+          </div>
+        </div>
+
+      <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Python 50%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Java & ImageJ 50%
+              </div>
+            </div>
+
+        </div>
+        <hr style="height:20px">
+
+      </div>
+
+    <!-- ============ End of Project9 =============== -->
 
     </section> <!-- ======= End Projects Section ======= -->
 
