Update index.html (add speed project dating)

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
             <tr>
               <th scope="row" class="align-middle text-nowrap">18h00</th>
-              <td class="table-danger"><b>BHM social event!</b></td>
+              <td class="table-danger"><b>BHM social event! / Speed project dating </b></td>
             </tr>
           </tbody>
         </table>
