--- a/BHM_2023/BHM_2023.html
+++ b/BHM_2023/BHM_2023.html
@@ -68,16 +68,16 @@
   <section id="hero" class="hero" style="height:75%">
     <div class="container" >
       <div class="row">
-        <div class="countdown col-sm-6 col-xs-6 col-md-6" data-count="2023/12/4" >
+<!--        <div class="countdown col-sm-6 col-xs-6 col-md-6" data-count="2023/12/4" >-->
           <h1>4 - 6 December 2023</h1>
           <img id="mrs_bb" src="images/brainhack2023_alpha.png" alt="" class="img-fluid animated">
-          <h2>%d Days %h Hours %m Min %s Sec <br>
+<!--          <h2>%d Days %h Hours %m Min %s Sec <br>-->
           twinned with the <a href="https://brainhacklucca.github.io/index.html"> <font color="#00FF00"> Brainhack</font> <font color="white"> Lucca</font>  <font color="red"> (Italy)</font></a>
           </h2>
         </div>
-        <div class="col-sm-6 col-xs-6 col-md-6">
+<!--        <div class="col-sm-6 col-xs-6 col-md-6">
           <img src="images/brainhack_location.png" style="max-width:520px;width:100%">
-        </div>
+        </div>-->
       </div>
     </div>
   </section><!-- End Hero -->
@@ -1584,9 +1584,6 @@
         </div>
 
         <div class="container">
-        <div class="row">
-            <img src="images/brainhackix.png" style="max-width:1024px;width:100%">
-        </div>
         </div>
 
         <div class="row justify-content-center">
